tests/snapshots/phantom_data_types@form.snap
---
source: tests/test_roundtrip.rs
description: "TypedId { value: 100, _phantom: PhantomData<test_roundtrip::User> }"
---
value=100
