tests/snapshots/phantom_data_types@query-2.snap
---
source: tests/test_roundtrip.rs
description: "TypedId { value: 1000, _phantom: PhantomData<test_roundtrip::Post> }"
---
value=1000
