tests/snapshots/recursive_structure-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
value=root&
children%5B0%5D%5Bvalue%5D=child1&
children%5B0%5D%5Bchildren%5D%5B0%5D%5Bvalue%5D=grandchild1&
children%5B0%5D%5Bchildren%5D%5B0%5D%5Bchildren%5D=&
children%5B0%5D%5Bchildren%5D%5B1%5D%5Bvalue%5D=grandchild2&
children%5B0%5D%5Bchildren%5D%5B1%5D%5Bchildren%5D=&
children%5B1%5D%5Bvalue%5D=child2&
children%5B1%5D%5Bchildren%5D=
