tests/snapshots/recursive_structure@query.snap
---
source: tests/test_roundtrip.rs
description: "TreeNode { value: \"root\", children: [TreeNode { value: \"child1\", children: [TreeNode { value: \"grandchild1\", children: [] }, TreeNode { value: \"grandchild2\", children: [] }] }, TreeNode { value: \"child2\", children: [] }] }"
---
value=root&
children[0][value]=child1&
children[0][children][0][value]=grandchild1&
children[0][children][1][value]=grandchild2&
children[1][value]=child2
