tests/snapshots/rename_all_camel_case.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
firstName=Jane&
lastName=Smith&
phoneNumber=555-1234&
emailAddress=jane@example.com
